# apriltag-trackerrr

./: .travis.yml  BoundedPID_8cpp.html  BoundedPID_8h.html  BoundedPID_8h_source.html  CMakeLists.txt  Doxyfile  DynamixelSim_8cpp.html  DynamixelSim_8h.html  DynamixelSim_8h_source.html  DynamixelSim__node_8cpp.html  MotorJoy_8cpp.html  MotorJoy_8h.html  MotorJoy_8h_source.html  MotorSim_8cpp.html  MotorSim_8h.html  MotorSim_8h_source.html  README.md  TagTracker_8cpp.html  TagTracker_8h.html  TagTracker_8h_source.html  TagTracker__node_8cpp.html  Tracker_8cpp.html  Tracker_8h.html  Tracker_8h_source.html  YoloTracker_8cpp.html  YoloTracker_8h.html  YoloTracker_8h_source.html  YoloTracker__node_8cpp.html  annotated.html  classBoundedPID-members.html  classBoundedPID.html  classDynamixelSim-members.html  classDynamixelSim.html  classMotorJoy-members.html  classMotorJoy.html  classMotorSim-members.html  classMotorSim.html  classTagTracker-members.html  classTagTracker.html  classTracker-members.html  (+21 more)
cfg/: camera.yaml  r_robot.yaml  robot_r1.yaml  robot_r2.yaml  robot_r3.yaml  rr_robot.yaml  rrr_robot.yaml  rrr_robot_example.yaml  rviz.rviz  xbox360.yaml
include/apriltag_trackerrr/: tagtracker.h
include/trackerrr/: BoundedPID.h  DynamixelSim.h  MotorJoy.h  MotorSim.h  TagTracker.h  Tracker.h  YoloTracker.h  tagtracker.h
launch/: apriltag_detect.launch  camera.launch  dh_to_tf.launch  dynamixel_controller.launch  dynamixel_sim_test.launch  dynamixel_single.launch  dynamixel_test.launch  joy.launch  joy_test.launch  r_tracker.launch  rr_tracker.launch  rrr_robot_example.launch  tag_detect.launch  track.launch  tracker.launch  tracker_tag.launch  tracker_yolo.launch  viz_r_robot.launch  viz_robot.launch  viz_rr_robot.launch  viz_rrr_robot.launch
search/: all_1.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+16 more)
src/: DinamixelSim_node.cpp  DynamixelSim.cpp  MotorJoy.cpp  MotorSim.cpp  TagTracker.cpp  TagTracker_node.cpp  Tracker.cpp  YoloTracker.cpp  YoloTracker_node.cpp  dh_to_tf.cpp  dynamixel_interface.cpp  tagtracker.cpp  tf_from_dh.py  tracking_error.cpp
trackerrr/: CMakeLists.txt  Doxyfile  package.xml
trackerrr/cfg/: robot_r1.yaml  robot_r2.yaml  rviz.rviz  xbox360.yaml
trackerrr/include/trackerrr/: BoundedPID.h  DynamixelSim.h  MotorJoy.h  MotorSim.h  TagTracker.h  Tracker.h  YoloTracker.h
trackerrr/launch/: dynamixel_controller.launch  tracker_tag.launch
trackerrr/src/: BoundedPID.cpp  DynamixelSim_node.cpp  MotorJoy.cpp  TagTracker_node.cpp  Tracker.cpp  YoloTracker_node.cpp  dh_to_tf.cpp  dynamixel_interface.cpp  tf_from_dh.py
